--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adaptors/cloudflare-pages/vite.config.ts",
+    "build.server": "vite build -c adaptors/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist",
     "dev": "vite --mode ssr",
@@ -19,6 +19,7 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
+    "test.unit": "vitest components",
     "qwik": "qwik"
   },
   "devDependencies": {
@@ -29,14 +30,18 @@
     "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "autoprefixer": "10.4.11",
     "eslint": "8.31.0",
     "eslint-plugin-qwik": "0.16.2",
     "node-fetch": "3.3.0",
+    "postcss": "^8.4.16",
     "prettier": "2.8.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.9.4",
     "undici": "5.14.0",
     "vite": "4.0.3",
     "vite-tsconfig-paths": "3.5.0",
+    "vitest": "^0.25.0",
     "wrangler": "latest"
   }
 }
