--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "test.unit": "vitest components",
+    "test.unit": "vitest src/",
     "qwik": "qwik"
   },
   "devDependencies": {
@@ -44,5 +44,8 @@
     "vite-tsconfig-paths": "3.5.0",
     "vitest": "^0.25.0",
     "wrangler": "latest"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3"
   }
 }
