--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adaptors/static/vite.config.ts",
-    "build.server2": "vite build -c adaptors/static/vite.config.ts && vite build -c adaptors/cloudflare-pages/vite.config.ts",
+    "build.server": "vite build -c adaptors/cloudflare-pages/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "wrangler pages dev ./dist --compatibility-date=2023-01-14",
     "dev": "vite --mode ssr",
